--- a/resident-ui/src/styles.css
+++ b/resident-ui/src/styles.css
@@ -482,7 +482,7 @@ button{
 }
 
 .cdk-global-overlay-wrapper, .cdk-overlay-container{
-  overflow-y: auto;
+  /*overflow-y: auto;*/
 }
 
 .info-icon-button{
